--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="overlay-dark"></div>
         <div class="container">
             <div class="hero-inner">
-                <h1>Vamos nos casar.</h1>
+                <h1>Vamos nos casar!!!</h1>
                 <div class="info">
                    <div id="countdown"> 462 <span>days</span> 18 <span>hours</span> 46 <span>mins</span> 34 <span>secs</span></div> 
                     <span class="date">12 de novembro de 2016, Santos, SP</span>
@@ -139,8 +139,8 @@
                         <h2 class="vibe">A noiva</h2>
                         <div class="story">
                             <p>Formada em Administração, ela sempre foi uma mulher independente, dirige desde 18 anos, sempre foi a motorista nas baladas e sua frase ao volante é "Tenho que me preocupar com quem esta na minha frente quem esta atrás que se cuide". Já viajou bastante com suas amigas, sempre foi muito preocupada com seus estudos e é fluente em inglês.</p>
-                            <p>Filha única e criada por 2 super mulheres, Solange sua mãe e Isaura sua vó, integrantes da família Ferreira, uma animada e tradicional família do Guarujá, com 8 tios, uns 13 primos e muita alegria. Ela sempre foi assim, como todos os primos, muito paparicada e tem como animal de estimação e filha a Lili, uma gata mais que linda que esta sempre ao seu lado em todas os momentos caseiros.</p>
-                            <p>Já esbarrou muitas vezes com Acacio nas idas e vindas da vida, mas ele aos olhos dela, sempre parecia muito jogado e ela muito reservada deu pouco espaço para uma aproximação. Se passaram danças no Manos Praia Bar, encontros entre amigos em comuns e até carnaval no Rio de Janeiro, antes de uma possível conversa...</p>
+                            <p>Filha única e criada por 2 super mulheres, Solange sua mãe e Isaura sua vó, integrantes da família Ferreira, uma animada e tradicional família do Guarujá, com 8 tios, uns 13 primos e muita alegria. Ela sempre foi assim, como todos os primos, muito paparicada e tem como animal de estimação e filha a Lili, uma gata mais que linda que esta sempre ao seu lado em todos os momentos caseiros.</p>
+                            <p>Já esbarrou muitas vezes com Acacio nas idas e vindas da vida mas ele, aos olhos dela sempre parecia muito jogado e ela muito reservada deu pouco espaço para uma aproximação. Se passaram danças no Manos Praia Bar, encontros entre amigos em comum e até carnaval no Rio de Janeiro, antes de uma possível conversa...</p>
                         </div>
                         <div class="social">
                             <ul>
@@ -157,8 +157,8 @@
                         <h2 class="vibe">O noivo</h2>
                         <div class="story">
                             <p>Surfista, skatista e apaixonado pela pratica de esportes, ele é formado em Desenvolvimento de Sistemas e dava muito trabalho na escola. Sempre com muitos amigos e apaixonado por esportes ele já praticou tênis, futebol, judo, handball e graças a sua mãe, já vamos falar dela, entrou no curso de informática onde iniciou sua trajetória na sua ambígua vida de Nerd/Esportista.</p>
-                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão casula, seu melhor companheiro de risadas e de evolução de vida. Além dos seus primos e tios que formam a família Egas Bela.</p>
-                            <p>Sempre observador ele sempre reparou com um olhar de atenção na Camila, com seu ditado clássico entre os amigos "Devagar se vai longe". Ele por várias vezes pedia para seus amigos em comuns, uma oportunidade para se aproximar dela, mas ele era muito bom em se enrolar e sempre deixava a Camila com a impressão errada...</p>
+                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão casula, seu melhor companheiro de risadas e de evolução. Além dos seus primos e tios que formam a família Egas Bela.</p>
+                            <p>Sempre observador ele sempre reparou com um olhar de atenção na Camila, com seu ditado clássico entre os amigos "Devagar se vai longe", por várias vezes pedia para seus amigos em comum, uma oportunidade para se aproximar dela, mas ele era muito bom em se enrolar e sempre deixava a Camila com a impressão errada...</p>
                         </div>
                         <div class="social">
                             <ul>
@@ -179,7 +179,7 @@
                             <div class="corners-bottomleft"></div>
                             <div class="corners-topright"></div>
                             <div class="corners-bottomright"></div>
-                “Amigos, que podemos também chamar de cupidos e logo serão os nossos padrinhos. Sim, esses foram os responsáveis por facilitar um simples encontro que mudou nossas vidas!”
+                “Amigos, que podemos também chamar de cupidos e logo serão os nossos padrinhos. Sim, esses foram os responsáveis por facilitar um simples encontro que mudou as nossas vidas!”
                         </div>
                     </div>
                 </div>
@@ -200,10 +200,10 @@
                     <div class="timeline-year start"><span>2014</span></div>
                     <div class="column six heart right">
                         <div class="box pattern">
-                            <span class="date">Abril 21</span>
+                            <span class="date">Abril 25</span>
                             <h2>Nosso encontro entre amigos</h2>
                             <div class="box-content">
-                                <p>Ele aos 30 anos e após o retorno de uma reflexiva viagem para Fernando de Noronha e ela com 28 anos e com um intercâmbio agendado de 30 dias para o Canada. E foi assim que eles se deram essa primeira chance de se conhecer melhor. Amigos, musicas e muita risada, foi assim que apareceu o primeiro encanto... </p>
+                                <p>Ele aos 30 anos e após o retorno de uma reflexiva viagem para Fernando de Noronha e ela com 27 anos e com um intercâmbio pré agendado de 30 dias para o Canada. E foi assim que eles se deram a primeira chance de se conhecerem melhor. Amigos, musicas e muita risada, foi assim que apareceu o primeiro encanto... </p>
                                 <a href="single-post.html" class="more">Read More</a>
                             </div>
                             
@@ -211,7 +211,7 @@
                     </div>
                     <div class="column six heart left movetop">
                         <div class="box pattern">
-                            <span class="date">April 23</span>
+                            <span class="date">April 27</span>
                             <h2>Primeiro encontro</h2>
                             <div class="box-content">
                                 <p>No final do final de semana um acai...</p>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="column six heart right">
                         <div class="box pattern">
-                            <span class="date">April 12</span>
+                            <span class="date">Junho 20</span>
                             <h2>A Primeira viagem</h2>
                             <div class="box-content">
                                 <div class="gallery">
@@ -665,7 +665,7 @@
                 <div class="row">
                     <div class="column six right">
                         <h2 class="vibe">Camila</h2>
-                        <span>@camilacassetari</span>
+                        <span>@camiscassetari</span>
                         <div id="twitter_one" class="tweets">
                             <a href="#" class="follow">&rarr; Siga Camila no Instagram</a>
                         </div>
