--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <span class="arrow-up"></span>
                 <span class="arrow-down"></span>
                 <div class="row">
-                    <div class="column six heart right">
+                    <!--<div class="column six heart right">
                         <div class="box center corner">
                             <div class="corners-topleft"></div>
                             <div class="corners-bottomleft"></div>
@@ -342,21 +342,21 @@
                             </div>
                             <a href="event.html" class="button">Read More</a>                            
                         </div>
-                    </div>
+                    </div>-->
                     <div class="column six heart right">
                         <div class="box center corner">
                             <div class="corners-topleft"></div>
                             <div class="corners-bottomleft"></div>
                             <div class="corners-topright"></div>
                             <div class="corners-bottomright"></div>
-                            <h2>Wedding Ceremony</h2>
+                            <h2>Cerimônia religiosa</h2>
                             <div class="details">
-                                <span class="waddress">Club Insomnia</span>
+                                <span class="waddress">Igreja do Valongo</span>
                                 <span class="waddress">60 Switch Street, New York NY</span>
-                                <span class="wdate">Thursday, 16 August 2014</span>
-                                <span class="wtime">8:00 PM - 5:00 AM</span>
+                                <span class="wdate">Sabado, 12 de novembro de 2016</span>
+                                <span class="wtime">17:00 - 18:00</span>
                             </div>
-                            <a href="event.html" class="button">Read More</a>                            
+                            <a href="event.html" class="button">Saiba mais...</a>                            
                         </div>
                     </div>
                     <div class="column six heart left">
@@ -365,14 +365,14 @@
                             <div class="corners-bottomleft"></div>
                             <div class="corners-topright"></div>
                             <div class="corners-bottomright"></div>
-                            <h2>Wedding Party</h2>
+                            <h2>Festa de comemoração</h2>
                             <div class="details">
-                                <span class="waddress">Club Insomnia</span>
-                                <span class="waddress">60 Switch Street, New York NY</span>
-                                <span class="wdate">Thursday, 16 August 2014</span>
-                                <span class="wtime">8:00 PM - 5:00 AM</span>
+                                <span class="waddress">Espaco Tremendão</span>
+                                <span class="waddress">R. Brás Cubas, 412 - Vila Matias, Santos - SP</span>
+                                <span class="wdate">Sabado, 12 de novembro de 2016</span>
+                                <span class="wtime">18:30 - 24:00</span>
                             </div>
-                            <a href="event.html" class="button">Read More</a>                            
+                            <a href="event.html" class="button">Saiba mais...</a>                            
                         </div>
                     </div>
                     <div class="clearfix"></div>
