--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Title
     ================================================== -->
-    <title>Wedding Theme</title>
+    <title>Camila e Acacio</title>
 
     <!-- Google Fonts
     ================================================== -->
