--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <section class="parallax" data-type="parallax">
             <div class="overlay"></div>
             <div class="container">
-                <h2 class="quote">“Nesse verao iremos dar um passo muito importante em nossas vidas...”</h2>
+                <h2 class="quote">“Acreditamos que quanto mais dividimos o amor, mais ele se multiplica.”</h2>
             </div>
         </section>
         <!-- #Parallax Section Ends -->
@@ -351,8 +351,8 @@
                             <div class="corners-bottomright"></div>
                             <h2>Cerimônia religiosa</h2>
                             <div class="details">
-                                <span class="waddress">Igreja do Valongo</span>
-                                <span class="waddress">Largo Marquês de Monte Alegre, 13 - Santos - SP</span>
+                                <span class="waddress">Santuário Santo Antônio do Valongo</span>
+                                <span class="waddress">R. Marquês de Herval, 13 - Santos - SP</span>
                                 <span class="wdate">Sabado, 12 de novembro de 2016</span>
                                 <span class="wtime">17:00 - 18:00</span>
                             </div>
@@ -367,8 +367,8 @@
                             <div class="corners-bottomright"></div>
                             <h2>Festa de comemoração</h2>
                             <div class="details">
-                                <span class="waddress">Espaco Tremendão</span>
-                                <span class="waddress">R. Brás Cubas, 412 - Vila Matias, Santos - SP</span>
+                                <span class="waddress">Lounge Tremendão</span>
+                                <span class="waddress">R. Brás Cubas, 404 - Vila Matias, Santos - SP</span>
                                 <span class="wdate">Sabado, 12 de novembro de 2016</span>
                                 <span class="wtime">18:30 - 24:00</span>
                             </div>
@@ -852,7 +852,7 @@
         <section id="instagram-section" class="pattern">
             <header class="section-header">
                 <h3 class="section-title">Instagram</h3>
-                <p class="section-tagline">Marque nosso Instagram em suas fotos no nosso dia ou nas suas mensagem.</p>
+                <p class="section-tagline">Marque nosso Instagram em suas fotos no nosso dia ou nas suas mensagens.</p>
             </header>
             <span class="hash">@camis_jr</span>
             <div class="container">
