--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <!--<div class="row">
                     <div class="twelve">
                         <div class="box corner quote">
                             <div class="corners-topleft"></div>
@@ -162,7 +162,7 @@
                 “Amigos, que podemos também chamar de cupidos e logo serão os nossos padrinhos. Sim, esses foram os responsáveis por facilitar um simples encontro que mudou as nossas vidas!”
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </section>
         <!-- #Story Section Ends -->
@@ -289,7 +289,7 @@
         <section id="wedding-events" class="pattern">
             <header class="section-header">
                 <h3 class="section-title">O Casamento</h3>
-                <p class="section-tagline">Vamos Celebrar nosso Matrimônio e comemorar nosso dia como nossos familiares e amigos.</p>
+                <p class="section-tagline">Iremos celebrar nosso matrimônio e comemorar nosso dia com nossos familiares e amigos.</p>
             </header>
             <div class="container timeline">
                 <span class="arrow-up"></span>
@@ -337,10 +337,10 @@
                             <div class="details">
                                 <span class="waddress">Santuário Santo Antônio do Valongo</span>
                                 <span class="waddress">R. Marquês de Herval, 13 - Santos - SP</span>
-                                <span class="wdate">Sabado, 12 de novembro de 2016</span>
+                                <span class="wdate">Sábado, 12 de novembro de 2016</span>
                                 <span class="wtime">17:00 - 18:00</span>
                             </div>
-                            <a href="event.html" class="button">Saiba mais...</a>                            
+                            <!--<a href="event.html" class="button">Saiba mais...</a>-->
                         </div>
                     </div>
                     <div class="column six heart left">
@@ -353,10 +353,10 @@
                             <div class="details">
                                 <span class="waddress">Lounge Tremendão</span>
                                 <span class="waddress">R. Brás Cubas, 404 - Vila Matias, Santos - SP</span>
-                                <span class="wdate">Sabado, 12 de novembro de 2016</span>
+                                <span class="wdate">Sábado, 12 de novembro de 2016</span>
                                 <span class="wtime">18:30 - 24:00</span>
                             </div>
-                            <a href="event.html" class="button">Saiba mais...</a>                            
+                            <!--<a href="event.html" class="button">Saiba mais...</a>-->
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -522,18 +522,18 @@
                     <ul id="gallery-filter">
                         <li class="active"><a href="#" data-filter="*">Todas</a>
                         </li>
-                        <li><a href="#" data-filter=".carnario">Carnaval Rio de Janeiro</a>
+                        <li><a href="#" data-filter=".viagens">Viagens</a>
                         </li>
-                        <li><a href="#" data-filter=".noronha">Fernando de Noronha</a>
+                        <li><a href="#" data-filter=".passeios">Passeios</a>
                         </li>
-                        <li><a href="#" data-filter=".outros">Passeios</a>
+                        <li><a href="#" data-filter=".amigos">Amigos e família</a>
                         </li>
                     </ul>
                 </div>
             </div>
 
             <div id="gallery-wrapper">
-                <div class="block carnario">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/carnario1.JPG" alt="image">
                     </div>
@@ -545,7 +545,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block amigos">
                     <div class="image-holder">
                         <img src="images/album/outros1.jpg" alt="image">
                     </div>
@@ -557,7 +557,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block passeios">
                     <div class="image-holder">
                         <img src="images/album/outros2.jpg" alt="image">
                     </div>
@@ -567,7 +567,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block amigos">
                     <div class="image-holder">
                         <img src="images/album/outros3.jpg" alt="image">
                     </div>
@@ -577,7 +577,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block amigos">
                     <div class="image-holder">
                         <img src="images/album/outros4.jpg" alt="image">
                     </div>
@@ -587,7 +587,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block amigos">
                     <div class="image-holder">
                         <img src="images/album/outros5.jpg" alt="image">
                     </div>
@@ -597,9 +597,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="block outros">
+                <div class="block amigos">
                     <div class="image-holder">
-                        <img src="images/album/outros3.jpg" alt="image">
+                        <img src="images/album/outros6.jpg" alt="image">
                     </div>
                     <a href="images/album/outros3.jpg" class="portfolio-hover">
                         <div class="portfolio-info">
@@ -607,7 +607,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block carnario">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/carnario2.JPG" alt="image">
                     </div>
@@ -619,7 +619,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block noronha">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/noronha3.jpg" alt="image">
                     </div>
@@ -631,7 +631,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block noronha">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/noronha1.JPG" alt="image">
                     </div>
@@ -641,7 +641,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block noronha">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/noronha2.JPG" alt="image">
                     </div>
@@ -651,7 +651,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="block noronha">
+                <div class="block viagens">
                     <div class="image-holder">
                         <img src="images/album/noronha4.JPG" alt="image">
                     </div>
@@ -698,7 +698,7 @@
         <section id="gift-registry" class="pattern">
             <header class="section-header">
                 <h3 class="section-title">Lista de presentes</h3>
-                <p class="section-tagline">Preparamos uma lista com itens que ainda nao temos no nosso cantinho...</p>
+                <p class="section-tagline">Preparamos uma lista com itens que ainda não temos no nosso cantinho...</p>
             </header>
             <div class="container">
                 <ul class="small-box corner">
@@ -866,7 +866,7 @@
                 </div>
             </div>
             <div class="load-more">
-                <a href="#" class="button">Load more</a>
+                <!--<a href="#" class="button">Load more</a>-->
             </div>
         </section>
         <!-- #Instagram Section Ends -->
@@ -902,11 +902,11 @@
                                     <option value="Six">Seis</option>
                                 </select>
                             </div>
-                            <div class="column six auto-safe">
+                            <!--<div class="column six auto-safe">
                                 <label for="autovalue">Codigo de Segurança</label>
                                 <input type="text" id="autovalue" name="autovalue">
                                 <i class="fa fa-refresh auto-refresh" title="Reload security question"></i>
-                            </div>
+                            </div>-->
                             <div class="clearfix"></div>
                             <input type="hidden" name="submit">
                             <input type="submit" value="Estarei presente">
@@ -922,9 +922,9 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="column four copyright">Theme made by <a href="#">logicathemes.com</a></div>
+                    <div class="column four copyright"> - </div>
                     <div class="column four logo">C<span>&</span>A</div>
-                    <div class="column four info">Photos by <a href="#">Rafael Vaz</a></div>
+                    <div class="column four info">WebSite by <a href="acacio.egas@gmail.com">Acacio Egas</a></div>
                 </div>
             </div>
         </footer>
