--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <!-- RSVP Now -->
         <section id="invitation" class="pattern">
-            <span>Voce é nosso convidado!</span>
+            <span>Voce é o nosso convidado!</span>
             <a id="to-rsvp" href="#contact" class="button scrollTo">Confirme sua presença.</a>
         </section>
         <!-- #RSVP Now -->
@@ -147,7 +147,7 @@
                         <h2 class="vibe">O noivo</h2>
                         <div class="story">
                             <p>Surfista, skatista e apaixonado pela pratica de esportes, ele é formado em Desenvolvimento de Sistemas e dava muito trabalho na escola. Sempre com muitos amigos e apaixonado por esportes ele já praticou tênis, futebol, judo, handball e graças a sua mãe, já vamos falar dela, entrou no curso de informática onde iniciou sua trajetória na sua ambígua vida de Nerd/Esportista.</p>
-                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão casula, seu melhor companheiro de risadas e de evolução. Além dos seus primos e tios que formam a família Egas Bela.</p>
+                            <p>Juninho é o filho mais velho de Acacio e Márcia e tem 2 irmãos: Andressa, a do meio, sua parceira inseparável de vida e seu irmão caçula, seu melhor companheiro de risadas e de evolução. Além dos seus primos e tios que formam a família Egas Bela.</p>
                             <p>Muito observador ele sempre reparou com um olhar de atenção na Camila, com seu ditado clássico entre os amigos "Devagar se vai longe", por várias vezes pedia para seus amigos em comum, uma oportunidade para se aproximar dela, mas ele era muito bom em se enrolar e sempre deixava a Camila com a impressão errada...</p>
                         </div>
                     </div>
@@ -820,7 +820,7 @@
                         </div>
                     </div>-->
                     <div class="clearfix"></div>
-                    <div class="timeline-button"><a href="#" class="button">Load more</a></div>
+                    <!--<div class="timeline-button"><a href="#" class="button">Load more</a></div>-->
                 </div>
             </div>
             <div class="form color">
@@ -839,7 +839,7 @@
                                 <input type="text" id="email" name="email">
                             </div>
                             <div class="column twelve">
-                                <label for="comment">Menssagem</label>
+                                <label for="comment">Dedicatória</label>
                                 <textarea name="comment" cols="30" rows="10"></textarea>
                             </div>
                             <div class="clearfix"></div>
@@ -858,7 +858,7 @@
         <section id="instagram-section" class="pattern">
             <header class="section-header">
                 <h3 class="section-title">Instagram</h3>
-                <p class="section-tagline">Marque nosso Instagram em suas fotos no nosso dia ou nas suas mensagens.</p>
+                <p class="section-tagline">No nosso dia, marque o nosso Instagram em suas fotos ou mensagens.</p>
             </header>
             <span class="hash">@camis_jr</span>
             <div class="container">
