--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <header id="main-menu">
             <div class="container">
                 <div class="row">
-                    <div id="menu-logo" >N <span>&amp;</span> R</div>
+                    <div id="menu-logo" >C <span>&amp;</span> A</div>
                     <nav id="navigation" class="column twelve">
                         <ul>
                             <li class="submenu"><a href="#logo">Os noivos</a>
