Ajuste mensagem para os noivos

--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
                     <ul>
                         <li class="wedding">Cerimônia religiosa</li>
                         <li class="weddingParty">Festa de casamento</li>
+                        <li class="hotel">Hoteis proximos</li>
                     </ul>
                 </div>
             </div>
@@ -824,23 +825,24 @@
                 </div>
             </div>
             <div class="form color">
-                <header class="section-header">
+                <!--<header class="section-header">
                     <h3>Escreva uma mensagem</h3>
-                </header>
+                </header>-->
                 <div class="container smaller">
-                    <div class="row">
-                        <form action="guestbook.php" method="POST" autocomplete="off" class="actionform">
+                    <!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd0ED5Wkn9_tbOz_1qhheoiBrbdHLMyt6EecP2FXstHxbbP9g/viewform?embedded=true" width="721" height="550" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    <div class="row">-->
+                        <form autocomplete="off" onsubmit="" target="_blank" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSeVMRmPYkFepg11FBK6hCpysTEOj1MEAdtPpn_wGk18-1MvnA/formResponse" >
                             <div class="column six">
                                 <label for="name">Nome</label>
-                                <input type="text" id="name" name="name">
+                                <input arial-label="Digite seu nome" type="text" id="entry.1298085174" name="entry.1298085174">
                             </div>
                             <div class="column six">
                                 <label for="email">Email</label>
-                                <input type="text" id="email" name="email">
+                                <input type="text" id="entry.1375637519" name="entry.1375637519">
                             </div>
                             <div class="column twelve">
                                 <label for="comment">Dedicatória</label>
-                                <textarea name="comment" cols="30" rows="10"></textarea>
+                                <textarea id="entry.820903244" name="entry.820903244" cols="30" rows="10"></textarea>
                             </div>
                             <div class="clearfix"></div>
                             <input type="hidden" name="submit">
@@ -950,7 +952,11 @@
     <script>
         var markers = [
             ['Santuário Santo Antônio do Valongo', -23.9314712,-46.333532, 'wedding','Local da cerimônia religiosa.'],
-            ['Lounge Tremendão', -23.946864,-46.3256974 , 'weddingParty','Local da comemoração.']
+            ['Lounge Tremendão', -23.946864,-46.3256974 , 'weddingParty','Local da comemoração.'],
+            ['Novotel Santos', -23.965397,-46.334543 , 'hotel','Hotel.']
+            ['Hotel Parque Balneario', -23.9690984,-46.3348815 , 'hotel','Hotel.']
+            ['Hotel Praiano', -23.9662756,-46.3499038 , 'hotel','Hotel.']
+            
         ];
     </script>
 </body>
