Confirmacao de prenca

--- a/index.html
+++ b/index.html
@@ -882,26 +882,26 @@
             <div class="form">
                 <div class="container smaller">
                     <div class="row">
-                        <form action="action.php"  method="POST" autocomplete="off" class="actionform">
+                        <form autocomplete="off" onsubmit="" target="_blank" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSco3hbv-QZjqOuKBo_TyO4t66LHya7dTMB4NefLIpMKE-52cA/formResponse">
                             <div class="notification"></div>
                             <div class="column six">
                                 <label for="name">Nome</label>
-                                <input type="text" id="name" name="name">
+                                <input type="text" id="entry.518976856" name="entry.518976856">
                             </div>
-                            <div class="column six">
+                            <!--<div class="column six">
                                 <label for="email">Email</label>
                                 <input type="text" id="email" name="email">
-                            </div>
+                            </div>-->
                             <div class="column six">
                                 <label for="persons">Número de convidados</label>
-                                <select name="persons" id="persons">
-                                    <option value="One" disabled selected="selected"> Quantas pessoas?</option>
-                                    <option value="One">Uma</option>
-                                    <option value="Two">Duas</option>
-                                    <option value="Three">Três</option>
-                                    <option value="Four">Quatro</option>
-                                    <option value="Five">Cinco</option>
-                                    <option value="Six">Seis</option>
+                                <select name="entry.1101720601" id="entry.1101720601">
+                                    <option value="Uma" disabled selected="selected"> Quantas pessoas?</option>
+                                    <option value="Uma">Uma</option>
+                                    <option value="Duas">Duas</option>
+                                    <option value="Três">Três</option>
+                                    <option value="Quatro">Quatro</option>
+                                    <option value="Cinco">Cinco</option>
+                                    <option value="Seis">Seis</option>
                                 </select>
                             </div>
                             <!--<div class="column six auto-safe">
