Ajuste do album

--- a/index.html
+++ b/index.html
@@ -600,9 +600,9 @@
                 </div>
                 <div class="block amigos">
                     <div class="image-holder">
-                        <img src="images/album/outro6.jpg" alt="image">
+                        <img src="images/album/outro6.JPG" alt="image">
                     </div>
-                    <a href="images/album/outro6.jpg" class="portfolio-hover">
+                    <a href="images/album/outro6.JPG" class="portfolio-hover">
                         <div class="portfolio-info">
                             <h3 class="portfolio-title">Passeios</h3>
                         </div>
@@ -622,9 +622,9 @@
                 </div>
                 <div class="block viagens">
                     <div class="image-holder">
-                        <img src="images/album/noronha3.jpg" alt="image">
+                        <img src="images/album/noronha3.JPG" alt="image">
                     </div>
-                    <a href="images/album/noronha3.jpg" class="portfolio-hover">
+                    <a href="images/album/noronha3.JPG" class="portfolio-hover">
                         <div class="portfolio-info">
                             <h3 class="portfolio-title">
                                 <span class="cat">Fernando de Noronha</span>
