Ajuste do album

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                     <a href="images/album/outros1.jpg" class="portfolio-hover">
                         <div class="portfolio-info">
                             <h3 class="portfolio-title">
-                                <span class="cat">Passeios</span>
+                                <span class="cat">Amigos</span>
                             </h3>
                         </div>
                     </a>
@@ -574,7 +574,7 @@
                     </div>
                     <a href="images/album/outros3.jpg" class="portfolio-hover">
                         <div class="portfolio-info">
-                            <h3 class="portfolio-title">Passeios</h3>
+                            <h3 class="portfolio-title">Família</h3>
                         </div>
                     </a>
                 </div>
@@ -584,7 +584,7 @@
                     </div>
                     <a href="images/album/outros4.jpg" class="portfolio-hover">
                         <div class="portfolio-info">
-                            <h3 class="portfolio-title">Passeios</h3>
+                            <h3 class="portfolio-title">Família</h3>
                         </div>
                     </a>
                 </div>
@@ -594,11 +594,11 @@
                     </div>
                     <a href="images/album/outros5.jpg" class="portfolio-hover">
                         <div class="portfolio-info">
-                            <h3 class="portfolio-title">Passeios</h3>
+                            <h3 class="portfolio-title">Amigos</h3>
                         </div>
                     </a>
                 </div>
-                <div class="block amigos">
+                <div class="block passeios">
                     <div class="image-holder">
                         <img src="images/album/outro6.JPG" alt="image">
                     </div>
