--- a/index.html
+++ b/index.html
@@ -662,6 +662,16 @@
                         </div>
                     </a>
                 </div>
+                <div class="block viagens">
+                    <div class="image-holder">
+                        <img src="images/album/noronha5.JPG" alt="image">
+                    </div>
+                    <a href="images/album/noronha5.JPG" class="portfolio-hover">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-title">Fernando de Noronha</h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
         <!-- #Small Gallery Section Ends -->
