--- a/index.html
+++ b/index.html
@@ -963,8 +963,8 @@
         var markers = [
             ['Santuário Santo Antônio do Valongo', -23.9314712,-46.333532, 'wedding','Local da cerimônia religiosa.'],
             ['Lounge Tremendão', -23.946864,-46.3256974 , 'weddingParty','Local da comemoração.'],
-            ['Novotel Santos', -23.965397,-46.334543 , 'hotel','Hotel.']
-            ['Hotel Parque Balneario', -23.9690984,-46.3348815 , 'hotel','Hotel.']
+            ['Novotel Santos', -23.965397,-46.334543 , 'hotel','Hotel.'],
+            ['Hotel Parque Balneario', -23.9690984,-46.3348815 , 'hotel','Hotel.'],
             ['Hotel Praiano', -23.9662756,-46.3499038 , 'hotel','Hotel.']
             
         ];
