--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/retina.min.js"></script>
     <script src="js/jquery.soc-share.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-JKRyz84jwUf8ZeyUGx2iNBwA3Didy8M&amp;amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-JKRyz84jwUf8ZeyUGx2iNBwA3Didy8M"></script>
     <script src="js/custom.js"></script>
     <script>
         var markers = [
