--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <meta name="google-site-verification" content="ORksGnagIiDE301GIvIEde_3Iq9EWi9ZdAG0Ju3r_1U" />
 
     <!-- Title
     ================================================== -->
